--- a/www/index.html
+++ b/www/index.html
@@ -2,29 +2,19 @@
 <html>
 <head>
     <title>WebServ Test Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        h1 {
-            color: #333;
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 10px;
-        }
-        .success {
-            background-color: #d4edda;
-            color: #155724;
-            padding: 15px;
-            border-radius: 4px;
-            margin: 20px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <div class="menu-toggle" id="menu-toggle">
+            &#9776; <!-- Ícone do sanduíche -->
+        </div>
+    <ul class="nav-links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="upload.html">Upload</a></li>
+        <li><a href="404.html">Erro 404</a></li>
+    </ul>
+</nav>
     <h1>WebServ is Working!</h1>
     <div class="success">
         <p><strong>Congratulations!</strong> Your HTTP server is up and running successfully.</p>
