add changes in the menu section for index.html and upload.html

--- a/www/upload.html
+++ b/www/upload.html
@@ -5,16 +5,15 @@
      <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <nav class="navbar">
-        <div class="menu-toggle" id="menu-toggle">
-            &#9776; <!-- Ícone do sanduíche -->
-        </div>
-    <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="upload.html">Upload</a></li>
-        <li><a href="404.html">Erro 404</a></li>
-    </ul>
+<nav class="navbar">
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="upload.html">Upload</a></li>
+    <li><a href="404.html">Erro 404</a></li>
+    <li><a href="50x.html">Erro 500</a></li>
+  </ul>
 </nav>
+
     <h1>WebServ File Upload Test</h1>
     <div class="upload-form">
         <h2>Upload a file</h2>
