--- a/www/successupload.html
+++ b/www/successupload.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Upload Successful</h1>
+    <h1>Upload Successful!</h1>
     <div class="success">
-      <img src="images/done.gif" alt="404 Not Found" class="done-image" />
-        <p>Filename: "name" upload was successful</p>
+      <img src="images/done.gif" alt="success gif" class="done-image" />
+        <p>Your file was uploeaded successfully</p>
     </div>
         <p>Go back <a href="index.html">Home</a></p>
 </body>
