adding the graphic interface for the CGI

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="upload.html">Upload</a></li>
+    <li><a href="cgi.html">CGI</a></li>
   </ul>
 </nav>
     <h1>WebServ is Working!</h1>
