fix: invalid CGI test on 42 machines
www/upper.py / add execution permission
www/upper.py / fix page title
Makefile / set log level to critical on debug mode

--- a/www/cgi.html
+++ b/www/cgi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>File Upload Test</title>
+    <title>CGI Test</title>
      <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,11 +14,11 @@
 
     <h1>CGI Test</h1>
     <div class="upload-form">
-        <h2>Send Some Data</h2>
+        <h2>Upper Case Converter</h2>
         <form action="upper.py" method="post">
             <input type="text" id="data" name="data" placeholder="Enter some text">
             <br><br>
-            <button type="submit">Send Data</button>
+            <button type="submit">Convert</button>
         </form>
     </div>
 </body>
