--- a/www/404.html
+++ b/www/404.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>404 - Page Not Found</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <div class="container">
-    <img src="images/404.gif" alt="404 Not Found" class="error-image" />
+    <img src="/images/404.gif" alt="404 Not Found" class="error-image" />
     <h1>Uh oh, seems like we cannot find your page!</h1>
-    <p>Try a different link or go back to <a href="index.html">Homepage</a>.</p>
+    <p>Try a different link or go back to <a href="/index.html">Homepage</a>.</p>
   </div>
 </body>
 </html>
